# pcm-audio-manager-alsa

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example_asound.conf
src/: pcm_audio_manager.c  pcm_audio_manager.h
